# press-beta

./: .gitignore  Cargo.toml  boot.py  flake.nix  font.json  memory.x  process_font.py
hardware/: Library.kicad_sym  press-beta.kicad_pcb  press-beta.kicad_prl  press-beta.kicad_pro  press-beta.kicad_sch  sym-lib-table
hardware/Library.pretty/: LCD.kicad_mod  LCD_nopost.kicad_mod  tactile_switch_6x6x5.kicad_mod
hardware/outputs/: press-beta-B_Cu.gbr  press-beta-B_Mask.gbr  press-beta-B_Silkscreen.gbr  press-beta-Edge_Cuts.gbr  press-beta-F_Cu.gbr  press-beta-F_Mask.gbr  press-beta-F_Silkscreen.gbr  press-beta-NPTH.drl  press-beta-PTH.drl  press-beta-job.gbrjob
lambda-arena/: Cargo.toml  arena.rs  heap.rs  lambda.rs  lib.rs  test.rs
picolambda/: Cargo.toml  test.bdf
picolambda/.cargo/: config
picolambda/src/: lambda.rs  lcd.rs  main.rs
src/: lambda.rs  lcd.rs  main.rs
