[package]
name = "press-beta"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.17.2", default-features = false, features = [
  "critical-section",
] }
rp2040-hal = "0.8.2"
rp2040-boot2 = "0.3.0"
rp-pico = "0.7.0"
alloc-cortex-m = "0.4.4"
critical-section = "1.1.1"
cortex-m = { version = "0.7.7", features = ["critical-section"] }
cortex-m-rt = "0.7.3"
# cortex-m-rtic = "1.1.4"
# defmt = "0.3.4"
# defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-probe = { version = "0.3.1", features = ["print-rtt"] }
rtt-target = "0.4.0"
fugit = "0.3.6"

# [[bin]]
# name = "pico"
# target = "thumbv6m-none-eabi"

# [[bin]]
# name = "press-beta"
# target = "x86_64-linux-gnu"
