cargo-features = ["per-package-target"]

[package]
name = "picolambda"
version = "0.0.0"
edition = "2021"
forced-target = "thumbv6m-none-eabi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_arena = { path = "../lambda-arena", default-features = false }
once_cell = { version = "1.17.2", default-features = false, features = [
  "critical-section",
] }
rp2040-hal = "0.9.0"
rp2040-boot2 = "0.3.0"
rp-pico = "0.8.0"
alloc-cortex-m = "0.4.4"
critical-section = "1.1.1"
cortex-m = { version = "0.7.7", features = ["critical-section"] }
cortex-m-rt = "0.7.3"
# cortex-m-rtic = "1.1.4"
# defmt = "0.3.4"
# defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-probe = { version = "0.3.1", features = ["print-rtt"] }
rtt-target = "0.4.0"
fugit = "0.3.6"
nb = "1.1.0"
anyhow = { version = "1.0.75", default-features = false }
embedded-graphics = "0.8.1"


# [[bin]]
# name = "pico"
# target = "thumbv6m-none-eabi"

[[bin]]
name = "press-beta"
path = "src/main.rs"
test = false
bench = false

[profile.release]
opt-level = 3
lto = "fat"

# [profile.dev.package."*"] # +
# opt-level = 3 # +
